--- a/InvokeCycle/Layout/MainLayout.razor
+++ b/InvokeCycle/Layout/MainLayout.razor
@@ -2,8 +2,8 @@
 <div class="page">
 @*     <div class="sidebar">
         <NavMenu />
-    </div>
- *@
+    </div> *@
+
     <main>
         <div class="top-row px-4">
             <h4>Hello, Carl Franklin!</h4>
