--- a/InvokeCycle/Pages/Home.razor
+++ b/InvokeCycle/Pages/Home.razor
@@ -1,6 +1,12 @@
 ﻿@page "/"
+@inject IJSRuntime JS;
 <PageTitle>Home</PageTitle>
 
+
+<pre>Please click on 'Experiment 1' or 'Experiment 2' two switch between tabs. 
+    You can view the invocations in the console in DevTools. 
+    Click the 'Clear console' at bottom to clear the console.
+</pre>
 <div>
     <Tabs>
         <Tab Title="Experiment 1">
@@ -11,3 +17,12 @@
         </Tab>
     </Tabs>
 </div>
+
+@* <button class="clear-btn" @onclick="console.clear(); console.log('* Parent * Cleared console');"> *@
+<button class="clear-btn" @onclick=@(async () => 
+    {
+        await JS.InvokeVoidAsync("console.clear");
+        Console.WriteLine("* Parent * Cleared console");
+    })>
+    Clear Console
+</button>
